# global-hackathon-project-be

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  requirements.txt
alembic/: env.py
app/: main.py
app/api/v1/routers/: post_jobs.py
app/core/: config.py
app/db/models/: job.py
fastapi-neon-jobs/: .env.example  pyproject.toml
fastapi-neon-jobs/alembic/: env.py
fastapi-neon-jobs/app/api/v1/routers/: listings.py
fastapi-neon-jobs/app/db/models/: agency.py
fastapi-neon-jobs/app/schemas/: job.py
fastapi-neon-jobs/app/services/: agency_client.py
fastapi-neon-jobs/app/utils/: neon.py
fastapi-neon-jobs/tests/: test_post_jobs.py
tests/: test_listings.py
