[tool.poetry]
name = "fastapi-neon-jobs"
version = "0.1.0"
description = "A FastAPI application for job listings and posting jobs to an agency's dashboard."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
asyncpg = "^0.24.0"
pydantic = "^1.8.2"
alembic = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"